# EDavomat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
github/workflows/: ci.yml
project/adminpage/: admin.py  apps.py  filters.py  models.py  services.py  urls.py  views.py
project/adminpage/adminsite/: sites.py  statistics.py
project/adminpage/management/commands/: createadmin.py
project/bot/: runner.py
project/bot/config/: routers.py  settings.py
project/bot/database/: admin.py  classes.py  students.py
project/bot/handlers/: callbacks.py  start.py
project/bot/handlers/admin/: rollcall.py
project/bot/handlers/teacher/: rollcall.py
project/bot/keyboards/inline/: buttons.py
project/bot/keyboards/reply/: buttons.py
project/bot/management/commands/: runbot.py
project/bot/states/: admin.py  teacher.py
project/bot/utils/: state.py  webhook.py
project/channels/: apps.py
project/channels/admin/: __init__.py  botadmin.py  channeladmin.py
project/channels/models/: __init__.py  admins.py  channels.py
project/classes/: admin.py  apps.py  models.py
project/config/: settings.py  urls.py
project/schools/: admin.py  apps.py  models.py
project/static/: styles.css
project/static/staffadmin/: dashboard.css  dashboard.js
project/students/: admin.py  apps.py  models.py
project/templates/staffadmin/: index.html
project/utils/: baza3.xlsx
project/utils/management/commands/: runweb.py  (+3 more)
project/utils/string/: uzlatin.py
project/utils/xlsx/: reader.py  writer.py
