[project]
name = "davomatim"
version = "0.1.0"
description = "Davomat system for all comunications"
authors = [
    {name = "Javohir",email = "qobiljonsharipov33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "aiogram (>=3.24.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
